# goat-tracker-rust

./: .env  Cargo.toml  README.md  test.db
docs/: data_model.graphml
migrations/2018-09-05-150250_create_tables/: down.sql  up.sql
src/: db.rs  entities.rs  handlers.rs  main.rs  schema.rs
src/handlers/: project.rs
